# myray

./: Cargo.toml  LICENSE  README.md  TODO
src/: args.rs  camera.rs  color.rs  config.rs  fb.rs  hittest.rs  lib.rs  main.rs  material.rs  pg.rs  ray.rs  screen.rs  sphere.rs  tracer.rs  unit_random.rs  util.rs  vec3.rs  world.rs
worlds/: pyramid.yaml  threeballs.yaml
