[package]
name = "myray"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rays"

[dependencies]
clap = "2.33.0"
error-chain = "0.12.0"
indicatif = "0.11.0"
lazy_static = "1.3.0"
minifb = "0.12.0"
rand = "0.7.0"
