[package]
name = "myray"
description = "A little toy path tracer."
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rays"

[dependencies]
clap = "2.33.0"
error-chain = "0.12.0"
impl_ops = "0.1.1"
lazy_static = "1.3.0"
minifb = "0.12.0"
rand = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"